# pypi-template

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
docs/: advanced_python.md  advanced_python_summary.md  ml_dl_guide.md  practical_guide.md  python_advanced_patterns.md
src/example_package/: __init__.py  core.py
tests/: test_example.py
